--- a/it_ticket_pipeline.ipynb
+++ b/it_ticket_pipeline.ipynb
@@ -82,16 +82,17 @@
     "import pandas as pd\n",
     "from pyspark.sql import SparkSession\n",
     "\n",
-    "# Workspace path\n",
-    "csv_path = \"/Workspace/Users/avi@aidamant.com/servicenow-pipeline/servicenow_incidents_10k.csv\"\n",
+    "# IMPORTANT: Update this path to match where you uploaded the CSV in YOUR workspace\n",
+    "# Example: /Workspace/Users/your.email@company.com/servicenow-pipeline/servicenow_incidents_10k.csv\n",
+    "# Or place the CSV in the same repo folder as the notebook and use a relative path if supported\n",
+    "csv_path = \"/Workspace/Users/<your-email-here>/servicenow-pipeline/servicenow_incidents_10k.csv\"\n",
     "\n",
-    "# Read with Pandas\n",
+    "# Read with Pandas (Workspace files in Repos are reliably accessible via Pandas)\n",
     "pandas_df = pd.read_csv(csv_path)\n",
     "\n",
     "# Convert to Spark DataFrame\n",
     "raw_df = spark.createDataFrame(pandas_df)\n",
     "\n",
-    "# Print row count, schema, first 20 records\n",
     "print(f\"Raw row count: {raw_df.count()}\")\n",
     "raw_df.printSchema()\n",
     "display(raw_df.limit(20))"
